# Kaggle-Projects

./: airline-fleets-eda.ipynb  ds-salaries.ipynb  pyproject.toml
Temperature_Humidity_Dataset/: Pipfile  README.md  docker-compose.yml  temperature_data.ipynb
Temperature_Humidity_Dataset/db/: setup.sql  temperature_data.csv
Temperature_Humidity_Dataset/temp_data_dbt/: .user.yml  dbt_project.yml  profiles.yml
Temperature_Humidity_Dataset/temp_data_dbt/models/raw/: raw_temp_data.sql  sources.yml
Temperature_Humidity_Dataset/temp_data_dbt/models/staging/: stg_clean_temp_data.sql  stg_clean_temp_data.yml
Temperature_Humidity_Dataset/temp_data_dbt/tests/generic/: is_greater_than.sql
actuarial-loss-estimation/: actuarial.ipynb  actuarial_eda.ipynb  model.ipynb  nlp.ipynb  pyproject.toml
german_credit_risk/: eda.ipynb  model.ipynb
insurance_cross_selling/: insurance_cross_selling.ipynb
student_performace/: .gitignore  README.md  student_perfomance.ipynb
