[tool.poetry]
name = "kaggle-projects"
version = "0.1.0"
description = ""
authors = ["stephenjera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
numpy = "^2.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
xgboost = "^2.1.0"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
