[tool.poetry]
name = "actuarial-loss-estimation"
version = "0.1.0"
description = ""
authors = ["stephenjera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gensim = "^4.3.3"
ipykernel = "^6.29.5"
nltk = "^3.9.1"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
